--- a/src/style.css
+++ b/src/style.css
@@ -6,9 +6,12 @@ body {
   font-size: 18px;
 }
 
-/*
-  Login  
-*/
+footer{
+  text-align: center;
+  position: absolute;
+  padding: 1em;
+  bottom: 0%;
+}
 
 .root {
   display: flex;
@@ -17,6 +20,10 @@ body {
   justify-content: center;
   align-items: center;
   align-content: center;
+}
+
+h2{
+  font-size: medium;
 }
 
 .bg-login {
@@ -46,6 +53,7 @@ body {
 }
 
 .logo {
+  width: 270px;
   margin-top: 15px;
   margin-bottom: 0%;
   padding: 10px;
@@ -68,4 +76,131 @@ body {
   border-radius: 40px;
 }
 
+#registerEmail,
+#createUser,
+#createPassword,
+#confirmPassword {
+  background: #e68e8e;
+  margin-bottom: 2px;
+  border-radius: 60px;
+}
 
+#createAccount {
+  background: #e68e8e;
+  border-radius: 40px;
+}
+
+.wall {
+  min-height: 100vh;
+  width: 100%;
+  background-size: cover;
+  padding: 16px;
+  display: flex;
+  flex-wrap: wrap;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+
+}
+  /*margin: 0%;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}*/
+
+
+.bgTop {
+   display: inline-block;
+    width: 100%;
+    height: 120px;
+    margin: 0;
+    padding: 0;
+    position: fixed;
+  /*width: 100%;
+  height: 30%;
+  padding: 0%;
+  margin-top: 0%;*/
+  background-image: url("./img/Grande.jpeg");
+
+}
+
+.bgLeFestin {
+  width: 50%;
+  /*height: 70%;*/
+  align-items: center;
+  margin-left: 22%;
+  margin-top: 9px;
+  padding: 10px;
+  background: rgba(214, 240, 236, 0.9);
+}
+
+.logoFeed{  
+    width: 110%;
+    height: 60%;
+    margin-left: 0%;
+}
+
+.title{
+  font-family: "Jacques Francois";
+}
+
+.bgPost{
+  background-color: rgba(253, 222, 173, 0.55);
+  margin-top: 11em;
+  margin-left: 1.5em;
+  width: 90%;
+  height: 18%;
+  position: fixed;
+  border: solid 1px #3D274E;
+  border-radius: 5px;
+  font-size: small;
+  align-items: center;
+  background-position: 0% 10%;
+  
+  
+  /*margin-top: 5%;
+  position: relative;
+  width: 70%;
+  height: 40%;
+  background-size: cover;
+  padding: 0;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-position: 0% 10%;
+  background-color: rgba(253, 222, 173, 0.55);*/
+}
+
+.cPost{
+ background-color: rgba(253, 222, 173, 0.55);
+ margin-top: 75%;
+ margin-bottom: 10%;
+ margin-left: 5%;
+ width: 90%;
+ height: 18%;
+ position: fixed;
+ border: solid 1px #3D274E;
+ border-radius: 5px;
+ font-size: small;
+ align-items: center;
+ background-position: 0% 10%;
+ 
+
+}
+.post {
+  width: 80%;
+  height: 40%;
+  border-radius: 5%;
+}
+.postBtn{
+  background: #e68e8e;
+  margin-bottom: 2px;
+  border-radius: 5px;
+  font-family: "Jacques Francois";
+}
