--- a/src/style.css
+++ b/src/style.css
@@ -69,3 +69,37 @@ body {
 }
 
 
+#registerEmail,
+#createUser,
+#createPassword,
+#confirmPassword {
+  background: #e68e8e;
+  margin-bottom: 2px;
+  border-radius: 60px;
+}
+
+#createAccount {
+  background: #e68e8e;
+  border-radius: 40px;
+}
+
+.wall {
+  position: relative;
+  width: 390px;
+  height: 894px;
+  background-size: cover;
+  background-image: url("./img/Grande.jpeg");
+  padding: 0;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.post {
+  width: 250px;
+  height: 250px;
+  border-radius: 5%;
+}
