--- a/src/style.css
+++ b/src/style.css
@@ -7,12 +7,13 @@ body {
 }
 
 footer{
+  background-color: rgba(253, 222, 173, 0.55);
   text-align: center;
   position: absolute;
-  padding: 1em;
+  font-size: 100%;
+  padding: 0.3em 0;
   bottom: 0%;
 }
-
 .root {
   display: flex;
   flex-wrap: wrap;
@@ -198,7 +199,7 @@ h2{
  margin-bottom: 10%;
  margin-left: 5%;
  width: 90%;
- height: 18%;
+ 
  position: fixed;
  border: solid 1px #3D274E;
  border-radius: 5px;
@@ -208,11 +209,13 @@ h2{
  
 
 }
+
 .post {
   width: 80%;
   height: 40%;
   border-radius: 5%;
 }
+
 .postBtn{
   background: #e68e8e;
   margin-bottom: 2px;
@@ -248,4 +251,21 @@ h2{
   box-shadow: 0 5px rgb(54, 50, 50);
   transform: translatex(4px);
   
+}
+
+.pContainer{
+  display: flex;
+}
+
+.userPhoto{
+  width: 20%;
+  border-radius: 50%;
+  margin: 10%;
+  position: absolute;
+  }
+
+.publication{
+  font-family: "Jacques Francois";
+  font-size: larger;
+  background-color: aquamarine;
 }
